# Gruvah

./: .gitignore  CMakeLists.txt  README.md  create_usage_graphs.py
cmake/: CMakeCargo.cmake
gruvahlib/: CMakeLists.txt  Cargo.toml  cbindgen.toml  gruvah.h
gruvahlib/src/: envelope.rs  kick_synth.rs  lib.rs  midi_message.rs  midi_message_queue.rs  oscillator.rs  params.rs  pitch_envelope.rs  saturation.rs  target_pair.rs  utils.rs
modules/: CMakeLists.txt
resources/: magic.xml
src/: CMakeLists.txt  GruvahPlugin.cpp  GruvahPlugin.h  ParamListener.cpp  ParamListener.h  PluginBase.h
